Site title alignment quick fix

--- a/wp-content/themes/rebalance-child-mmn/style.css
+++ b/wp-content/themes/rebalance-child-mmn/style.css
@@ -331,6 +331,6 @@ details summary {
   }
 
   .has-site-logo .site-title, .wp-custom-logo .site-title {
-    vertical-align: text-bottom;
+    vertical-align: middle;
   }
 }
